--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
     width: 150px;
     height: 150px;
     object-position: cover;
+    margin-top: 10px;
     
 
 }
@@ -23,6 +24,8 @@ h1 {
     font-style: italic;
     display: inline-block;
     color: #2C0005;
+    font-family: cursive;
+    margin-top: 10px;
 }
 
 #portada {
@@ -35,8 +38,10 @@ h1 {
 #contenedor-busqueda {
     display: grid;
     border: #2E4744 solid 4px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     row-gap: 4px;
+    border-radius: 30px;
+    
 }
 img {
     width: 250px;
@@ -44,21 +49,41 @@ img {
     object-position: cover;
 }
 .afiche {
-    border: 4px solid #2E4744;
+    border: 4px solid #60b5c2;
     background-color: #D4B5A9;
+    border-radius: 30px;
 }
 button {
-    display: inline-block;
-    font-size: 30px;
-    background-color: #046684 solid;
-    font-size: medium;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-style: italic;
-    border: #D4B5A9 solid 3px;
-    width: 150px;
-    height: 75px;
-    text-emphasis-color: #046684;
+    background: #eb94d0;
+    background-image: -webkit-linear-gradient(top, #eb94d0, #2079b0);
+    background-image: -moz-linear-gradient(top, #eb94d0, #2079b0);
+    background-image: -ms-linear-gradient(top, #eb94d0, #2079b0);
+    background-image: -o-linear-gradient(top, #eb94d0, #2079b0);
+    background-image: linear-gradient(to bottom, #eb94d0, #2079b0);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    text-shadow: 3px 2px 1px #9daef5;
+   -webkit-box-shadow: 6px 5px 24px #666666;
+   -moz-box-shadow: 6px 5px 24px #666666;
+    box-shadow: 6px 5px 24px #666666;
+    font-family:cursive;
+    color: #fafafa;
+    font-size: 27px;
+    padding: 19px;
+    text-decoration: none;
 }
+
+button:hover {
+    background: #2079b0;
+    background-image: -webkit-linear-gradient(top, #2079b0, #eb94d0);
+    background-image: -moz-linear-gradient(top, #2079b0, #eb94d0);
+    background-image: -ms-linear-gradient(top, #2079b0, #eb94d0);
+    background-image: -o-linear-gradient(top, #2079b0, #eb94d0);
+    background-image: linear-gradient(to bottom, #2079b0, #eb94d0);
+    text-decoration: none;
+}
+
 footer {
     align-items: end;
     display: flex;
@@ -73,7 +98,7 @@ footer {
 }
 
 h2{
-    font-family: 'Lucida Sans';
+    font-family: cursive;
     color: #382527;
     border-color: 3px #0000;
     text-shadow: #0000;
@@ -90,4 +115,42 @@ p {
     width: 630px;
     height: 330px;
         
+}
+
+.buscador{
+    border-radius: 30px;
+    height: 15px;
+    width: 300px;
+    padding: 20px;
+    background: linear-gradient(to bottom right, rgb(255, 99, 135), white);
+    border: none;
+    font-family: cursive;
+}
+.buscador:hover{
+    border: 3px solid rgb(240, 179, 219);    
+}
+
+.Direc{
+    border-radius: 30px;
+    height: 30px;
+    width: 140px;
+    border: 2px solid rgb(240, 179, 219);
+    color: #A06468;
+    font-family: cursive;
+}
+.Produc{
+    border-radius: 30px;
+    height: 30px;
+    width: 140px;
+    border: 2px solid rgb(240, 179, 219);
+    color: #A06468; 
+    font-family: cursive;   
+}
+.orden{
+    border-radius: 30px;
+    height: 30px;
+    width: 140px;
+    border: 2px solid rgb(240, 179, 219);
+    color: #A06468;
+    font-family: cursive;
 }
